# bug-tracker

./: .gitignore  docker-compose.yml
api/: .env.vault  Makefile  pyproject.toml
api/api/: main.py
api/api/decorators/: singleton.py
api/api/models/: base.py  issue.py  project.py  user.py
api/api/schemas/: __init__.py  comment.py  issue.py  project.py  user.py
api/api/services/: config.py  db.py
api/migrations/: env.py
api/migrations/versions/: 55b5aceebf12_.py  83740233a00d_init_db.py
backend/app/: Makefile  alembic.ini  pyproject.toml
backend/app/app/: main.py
backend/app/app/models/: __init__.py  base.py  comment.py  issue.py
backend/app/app/routes/: __init__.py  router.py  routers.py
backend/app/app/routes/auth/: __init__.py
backend/app/app/routes/endpoints/: comments.py  issues.py  projects.py
backend/app/app/schemas/: __init__.py  comment.py  issue.py  project.py
backend/app/app/services/: __init__.py  auth.py  config.py  db.py
backend/app/migrations/: env.py
